--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Turtle Hatcheries in Sri Lanka</title>
-  <link rel="stylesheet" href="CSS/Home.css">
+  <link rel="stylesheet" href="CSS/Index.css">
   <script src="javaScript/Home.js"></script>
   <link rel="icon" href="Images/Favicon.ico" type="image/x-icon">
 </head>
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="Turtle Categories.html">Turtle Categories</a></li> 
         <li><a href="Hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
         <li><a href="Threats.html">Threats to Turtles</a></li>
