--- a/Turtle Categories.html
+++ b/Turtle Categories.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="Turtle Categories.html">Turtle Categories</a></li>
         <li><a href="Hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
         <li><a href="Threats.html">Threats to Turtles</a></li>
