--- a/Bentota.html
+++ b/Bentota.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="Images/Logo.png" alt="Logo">
+      <!-- <img src="Images/Logo.png" alt="Logo"> -->
     </div>
     <nav>
       <ul>
@@ -31,7 +31,7 @@
   <main>
     <section class="hatchery-info">
       <h1>Bentota Turtle Hatchery</h1>
-      <img src="bentota.jpg" alt="Bentota Turtle Hatchery">
+      <!-- <img src="bentota.jpg" alt="Bentota Turtle Hatchery"> -->
       <p>The Bentota Turtle Hatchery is located on the southern coast of Sri Lanka and is a popular destination for tourists who want to learn about sea turtles and support conservation efforts. The hatchery was established in 1986 and is run by a local community organization.</p>
       <h2>Activities at Bentota Turtle Hatchery</h2>
       <ul>
