--- a/Threats.html
+++ b/Threats.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="Images/Logo.png" alt="Logo">
+      <!-- <img src="Images/Logo.png" alt="Logo"> -->
     </div>
     <nav>
       <ul>
@@ -54,7 +54,28 @@
       </ul>
     </section>
   </main>
-  <footer>
+  <footer class="footer1">
+    <div class="footer-left">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+    <div class="footer-middle">
+      <!-- <img src="Images/logo.png" alt="Company Logo"> -->
+    </div>
+    <div class="footer-right">
+      <ul>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <button>Contact Us</button>
+    </div>
+  </footer>
+  <footer class="footer2">
     <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved.</p>
   </footer>
 </body>
