--- a/Bentota.html
+++ b/Bentota.html
@@ -31,26 +31,78 @@
   <main>
     <section class="hatchery-info">
       <h1>Bentota Turtle Hatchery</h1>
-      <!-- <img src="bentota.jpg" alt="Bentota Turtle Hatchery"> -->
-      <p>The Bentota Turtle Hatchery is located on the southern coast of Sri Lanka and is a popular destination for tourists who want to learn about sea turtles and support conservation efforts. The hatchery was established in 1986 and is run by a local community organization.</p>
+      <img src="Images/Bentota.jpg" alt="Bentota Turtle Hatchery">
+      <p>
+        Nestled along Sri Lanka's southern coast, the Bentota Turtle Hatchery beckons tourists with its commitment to sea turtle conservation. Established in 1986 and managed by a local community organization,
+        
+        the hatchery offers visitors an immersive experience to learn about these incredible creatures. Witnessing the hatching process, releasing baby turtles into the ocean, and understanding the challenges they face,
+        
+        tourists actively contribute to their protection. By supporting the Bentota Turtle Hatchery, visitors play a vital role in preserving the future of sea turtles and their fragile coastal habitats.
+      </p>
       <h2>Activities at Bentota Turtle Hatchery</h2>
       <ul>
         <li>Turtle hatchery tour</li>
+          <p>
+            Embark on a captivating turtle hatchery tour! Experience the wonder of witnessing baby turtles hatch and make their way to the sea, while supporting vital conservation efforts for these incredible creatures.
+          </p>
         <li>Turtle feeding</li>
+          <p>
+            Participate in feeding the turtles! Learn about the different species of sea turtles and their diets, and help feed them their favorite foods.
+          </p>
         <li>Turtle release</li>
+          <p>
+            Participate in releasing baby turtles into the ocean! Learn about the turtles' life cycle and the challenges they face, and help them make their way to the sea.
+          </p>
         <li>Educational programs</li>
+          <p>
+            Learn about sea turtles and their conservation! The hatchery offers educational programs for visitors to learn about the different species of sea turtles, their life cycle, and the threats they face.
+          </p>
       </ul>
       <h2>Conservation Efforts</h2>
       <p>The Bentota Turtle Hatchery works to protect sea turtle populations in several ways, including:</p>
       <ul>
         <li>Collecting and incubating turtle eggs</li>
+          <p>
+            By collecting and incubating turtle eggs, conservationists play a critical role in safeguarding sea turtle populations. This hands-on approach increases the survival rates of hatchlings and contributes to their long-term conservation.
+          </p>
         <li>Releasing hatchlings into the ocean</li>
+          <p>
+            By releasing hatchlings into the ocean, conservationists play a critical role in safeguarding sea turtle populations. This hands-on approach increases the survival rates of hatchlings and contributes to their long-term conservation.
+          </p>
         <li>Providing medical care to injured turtles</li>
+          <p>
+            By providing medical care to injured turtles, conservationists play a critical role in safeguarding sea turtle populations. This hands-on approach increases the survival rates of hatchlings and contributes to their long-term conservation.
+          </p>
         <li>Researching sea turtle behavior and ecology</li>
+          <p>
+            By researching sea turtle behavior and ecology, conservationists play a critical role in safeguarding sea turtle populations. This hands-on approach increases the survival rates of hatchlings and contributes to their long-term conservation.
+          </p>
       </ul>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126900.00918320527!2d79.9598131032827!3d6.312856671247082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22eab0662a311%3A0x3f76eca26e608182!2sSea%20Turtle%20Project!5e0!3m2!1sen!2slk!4v1685187345849!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
-  <footer>
+  <footer class="footer1">
+    <div class="footer-left">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+    <div class="footer-middle">
+      <!-- <img src="Images/logo.png" alt="Company Logo"> -->
+    </div>
+    <div class="footer-right">
+      <ul>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <button>Contact Us</button>
+    </div>
+  </footer>
+  <footer class="footer2">
     <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved.</p>
   </footer>
 </body>
