--- a/Kosgoda.html
+++ b/Kosgoda.html
@@ -31,26 +31,78 @@
   <main>
     <section class="hatchery-info">
       <h1>Kosgoda Turtle Hatchery</h1>
-      <img src="kosgoda.jpg" alt="Kosgoda Turtle Hatchery">
-      <p>Kosgoda Turtle Hatchery is located on the south-west coast of Sri Lanka and is a popular destination for tourists who want to learn about sea turtles and support conservation efforts. The hatchery was established in 1981 and is run by the Sri Lanka Wildlife Protection Society.</p>
+      <img src="Images/kosgoda.jpg" alt="Kosgoda Turtle Hatchery">
+      <p>
+        Located on Sri Lanka's south-west coast, the Kosgoda Turtle Hatchery is a renowned tourist attraction that promotes sea turtle conservation. Established in 1981 and managed by the Sri Lanka Wildlife Protection Society,
+        
+        the hatchery serves as a vital sanctuary for sea turtle eggs and hatchlings. Visitors can learn about the turtles' life cycle, witness the hatching process, and even participate in releasing baby turtles into the ocean.
+        
+        By supporting the hatchery, tourists contribute to the preservation of these magnificent creatures and the protection of their habitats.
+      </p>
       <h2>Activities at Kosgoda Turtle Hatchery</h2>
       <ul>
         <li>Turtle hatchery tour</li>
+          <p>
+            Embark on a captivating turtle hatchery tour! Experience the wonder of witnessing baby turtles hatch and make their way to the sea, while supporting vital conservation efforts for these incredible creatures.
+          </p>
         <li>Turtle feeding</li>
+          <p>
+            Participate in feeding the turtles! Learn about the different species of sea turtles and their diets, and help feed them their favorite foods.
+          </p>
         <li>Turtle release</li>
+          <p>
+            Participate in releasing baby turtles into the ocean! Learn about the turtles' life cycle and the challenges they face, and help them make their way to the sea.
+          </p>
         <li>Educational programs</li>
+          <p>
+            Learn about sea turtles and their conservation! The hatchery offers educational programs for visitors to learn about the different species of sea turtles, their life cycle, and the threats they face.
+          </p>
       </ul>
       <h2>Conservation Efforts</h2>
       <p>The Kosgoda Turtle Hatchery works to protect sea turtle populations in several ways, including:</p>
       <ul>
         <li>Collecting and incubating turtle eggs</li>
+          <p>
+            By collecting and incubating turtle eggs, conservationists play a critical role in safeguarding sea turtle populations. This hands-on approach increases the survival rates of hatchlings and contributes to their long-term conservation.
+          </p>
         <li>Releasing hatchlings into the ocean</li>
+          <p>
+            Releasing hatchlings into the ocean is a crucial step in the conservation of sea turtles. This process allows the hatchlings to make their way to the sea and begin their lives in the wild.
+          </p>
         <li>Providing medical care to injured turtles</li>
+          <p>
+            Providing medical care to injured turtles is an essential part of sea turtle conservation. Injured turtles are treated and rehabilitated, and if they cannot be released into the wild, they are provided with a permanent home.
+          </p>
         <li>Researching sea turtle behavior and ecology</li>
+          <p>
+            Researching sea turtle behavior and ecology is a vital aspect of sea turtle conservation. This research helps scientists understand the turtles' behavior and ecology, which is crucial in developing effective conservation strategies.
+          </p>
       </ul>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31723.419443635143!2d80.00716195785678!3d6.338644400694747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22a32144e35a7%3A0xa093fe007929469a!2sKosgoda%20Turtle%20Conservation%20and%20Research%20Centre!5e0!3m2!1sen!2slk!4v1685185678645!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
-  <footer>
+  <footer class="footer1">
+    <div class="footer-left">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+    <div class="footer-middle">
+      <!-- <img src="Images/logo.png" alt="Company Logo"> -->
+    </div>
+    <div class="footer-right">
+      <ul>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <button>Contact Us</button>
+    </div>
+  </footer>
+  <footer class="footer2">
     <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved.</p>
   </footer>
 </body>
