--- a/Purchase and Donate.html
+++ b/Purchase and Donate.html
@@ -51,10 +51,59 @@
       </form>
       <h2>Visit Our Gift Shop</h2>
       <p>Our gift shop offers a variety of turtle-themed merchandise, including t-shirts, hats, and stuffed animals. All proceeds go towards supporting our conservation efforts.</p>
-      <a href="gift-shop.html"><button>Visit Gift Shop</button></a>
+      <a href="#"><button>Visit Gift Shop</button></a>
+    </section>
+    <h2>Featured Products</h2>
+    <br>
+    <section class="products">
+      <div class="product">
+        <img src="Images/Product Images/turtle-t-shirt.jpg" alt="Turtle T-Shirt">
+        <h3>Turtle T-Shirt</h3>
+        <p>Price: $19.99</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="Images/Product Images/Turtle Hat.jpg" alt="Turtle Hat">
+        <h3>Turtle Hat</h3>
+        <p>Price: $14.99</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="Images/Product Images/Turtle Stuffed Animal.jpg" alt="Turtle Stuffed Animal">
+        <h3>Turtle Stuffed Animal</h3>
+        <p>Price: $24.99</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="product">
+        <img src="Images/Product Images/Turtle Mug.jpg" alt="Turtle Mug">
+        <h3>Turtle Mug</h3>
+        <p>Price: $12.99</p>
+        <button>Add to Cart</button>
+      </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer1">
+    <div class="footer-left">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
+    <div class="footer-middle">
+      <!-- <img src="Images/logo.png" alt="Company Logo"> -->
+    </div>
+    <div class="footer-right">
+      <ul>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="Images/facebook-f.svg"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <button>Contact Us</button>
+    </div>
+  </footer>
+  <footer class="footer2">
     <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved.</p>
   </footer>
 </body>
