--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Turtle Categories.html">Turtle Categories</a></li> 
         <li><a href="Hikkaduwa.html">Hikkaduwa Turtle Hatchery</a></li>
         <li><a href="Threats.html">Threats to Turtles</a></li>
