--- a/Purchase and Donate.html
+++ b/Purchase and Donate.html
@@ -85,26 +85,35 @@
   <footer class="footer1">
     <div class="footer-left">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><h3>Quick Links</h3></li>
+        <br>
+        <li><a href="index.html">Home</a></li>
+        <br>
+        <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+        <br>
+        <li><a href="Turtle Categories.html">Turtle Categories</a></li>
+        <br>
+        <li><a href="Bentota.html">Bentota</a></li>
       </ul>
     </div>
     <div class="footer-middle">
-      <!-- <img src="Images/logo.png" alt="Company Logo"> -->
+      <form>
+        <h3>Subscribe to our Newsletter</h3>
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit">Subscribe</button>
+      </form>
     </div>
-    <div class="footer-right">
-      <ul>
-        <li><a href="Images/facebook-f.svg"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="Images/facebook-f.svg"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="Images/facebook-f.svg"><i class="fab fa-instagram"></i></a></li>
-      </ul>
-      <button>Contact Us</button>
+    <div class="contact-us">
+      <h3>Contact Us</h3>
+      <p>Email: hikkaduwahatchery@gmail.com</p>
+      <br>
+      <p>Phone: +94 77 654 1123</p>
+      <br>
+      <p>Location: Hikkaduwa</p>
     </div>
   </footer>
   <footer class="footer2">
-    <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved.</p>
-  </footer>
+    <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by Althaf Rifath</p>
+  </footer> 
 </body>
 </html>
