--- a/Bentota.html
+++ b/Bentota.html
@@ -78,7 +78,7 @@
             By researching sea turtle behavior and ecology, conservationists play a critical role in safeguarding sea turtle populations. This hands-on approach increases the survival rates of hatchlings and contributes to their long-term conservation.
           </p>
       </ul>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126900.00918320527!2d79.9598131032827!3d6.312856671247082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22eab0662a311%3A0x3f76eca26e608182!2sSea%20Turtle%20Project!5e0!3m2!1sen!2slk!4v1685187345849!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe class="bentota-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126900.00918320527!2d79.9598131032827!3d6.312856671247082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22eab0662a311%3A0x3f76eca26e608182!2sSea%20Turtle%20Project!5e0!3m2!1sen!2slk!4v1685187345849!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer class="footer1">
