--- a/Kosgoda.html
+++ b/Kosgoda.html
@@ -78,7 +78,7 @@
             Researching sea turtle behavior and ecology is a vital aspect of sea turtle conservation. This research helps scientists understand the turtles' behavior and ecology, which is crucial in developing effective conservation strategies.
           </p>
       </ul>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31723.419443635143!2d80.00716195785678!3d6.338644400694747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22a32144e35a7%3A0xa093fe007929469a!2sKosgoda%20Turtle%20Conservation%20and%20Research%20Centre!5e0!3m2!1sen!2slk!4v1685185678645!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe class="kosgoda-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31723.419443635143!2d80.00716195785678!3d6.338644400694747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae22a32144e35a7%3A0xa093fe007929469a!2sKosgoda%20Turtle%20Conservation%20and%20Research%20Centre!5e0!3m2!1sen!2slk!4v1685185678645!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer class="footer1">
