--- a/Turtle Categories.html
+++ b/Turtle Categories.html
@@ -132,68 +132,70 @@
         biodiversity, and the wonders of their journeys. Together, we can ensure a future where these ancient mariners continue to inspire awe and advocate for ocean preservation.
       </p>
     </section>
-    <table>
-    <thead>
-      <tr>
-        <th>Category</th>
-        <th>Name</th>
-        <th>Scientific Name</th>
-        <th>Habitat</th>
-        <th>Conservation Status</th>
-        <th>Image</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Sea Turtle</td>
-        <td>Green Sea Turtle</td>
-        <td>Chelonia mydas</td>
-        <td>Coastal waters and coral reefs</td>
-        <td>Endangered</td>
-        <td><img src="Images/Table/Green Sea Turtle.jpg" alt="Green Sea Turtle"></td>
-      </tr>
-      <tr>
-        <td>Sea Turtle</td>
-        <td>Olive Ridley Turtle</td>
-        <td>Lepidochelys olivacea</td>
-        <td>Coastal waters, estuaries, and lagoons</td>
-        <td>Vulnerable</td>
-        <td><img src="Images/Table/Olive Ridley Turtle.jpg" alt="Olive Ridley Turtle"></td>
-      </tr>
-      <tr>
-        <td>Sea Turtle</td>
-        <td>Loggerhead Sea Turtle</td>
-        <td>Caretta caretta</td>
-        <td>Coastal waters and sandy beaches</td>
-        <td>Endangered</td>
-        <td><img src="Images/Table/Loggerhead Sea Turtle.jpg" alt="Loggerhead Sea Turtle"></td>
-      </tr>
-      <tr>
-        <td>Freshwater Turtle</td>
-        <td>Sri Lankan Black Turtle</td>
-        <td>Melanochelys trijuga</td>
-        <td>Rivers, lakes, and freshwater habitats</td>
-        <td>Critically Endangered</td>
-        <td><img src="Images/Table/Sri Lankan Black Turtle.jpg" alt="Sri Lankan Black Turtle"></td>
-      </tr>
-      <tr>
-        <td>Freshwater Turtle</td>
-        <td>Indian Flapshell Turtle</td>
-        <td>Lissemys punctata</td>
-        <td>Rivers, ponds, and marshes</td>
-        <td>Not listed</td>
-        <td><img src="Images/Table/Indian Flapshell Turtle.jpg" alt="Indian Flapshell Turtle"></td>
-      </tr>
-      <tr>
-        <td>Freshwater Turtle</td>
-        <td>Sri Lankan Softshell Turtle</td>
-        <td>Lissemys ceylonensis</td>
-        <td>Rivers, marshes, and wetlands</td>
-        <td>Endangered</td>
-        <td><img src="Images/Table/Sri Lankan Softshell Turtle.jpg" alt="Sri Lankan Softshell Turtle"></td>
-      </tr>
-    </tbody>
-  </table>
+    <div style="overflow-x: auto;">
+      <table>
+        <thead>
+          <tr>
+            <th>Category</th>
+            <th>Name</th>
+            <th>Scientific Name</th>
+            <th>Habitat</th>
+            <th>Conservation Status</th>
+            <th>Image</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Sea Turtle</td>
+            <td>Green Sea Turtle</td>
+            <td>Chelonia mydas</td>
+            <td>Coastal waters and coral reefs</td>
+            <td>Endangered</td>
+            <td><img src="Images/Table/Green Sea Turtle.jpg" alt="Green Sea Turtle"></td>
+          </tr>
+          <tr>
+            <td>Sea Turtle</td>
+            <td>Olive Ridley Turtle</td>
+            <td>Lepidochelys olivacea</td>
+            <td>Coastal waters, estuaries, and lagoons</td>
+            <td>Vulnerable</td>
+            <td><img src="Images/Table/Olive Ridley Turtle.jpg" alt="Olive Ridley Turtle"></td>
+          </tr>
+          <tr>
+            <td>Sea Turtle</td>
+            <td>Loggerhead Sea Turtle</td>
+            <td>Caretta caretta</td>
+            <td>Coastal waters and sandy beaches</td>
+            <td>Endangered</td>
+            <td><img src="Images/Table/Loggerhead Sea Turtle.jpg" alt="Loggerhead Sea Turtle"></td>
+          </tr>
+          <tr>
+            <td>Freshwater Turtle</td>
+            <td>Sri Lankan Black Turtle</td>
+            <td>Melanochelys trijuga</td>
+            <td>Rivers, lakes, and freshwater habitats</td>
+            <td>Critically Endangered</td>
+            <td><img src="Images/Table/Sri Lankan Black Turtle.jpg" alt="Sri Lankan Black Turtle"></td>
+          </tr>
+          <tr>
+            <td>Freshwater Turtle</td>
+            <td>Indian Flapshell Turtle</td>
+            <td>Lissemys punctata</td>
+            <td>Rivers, ponds, and marshes</td>
+            <td>Not listed</td>
+            <td><img src="Images/Table/Indian Flapshell Turtle.jpg" alt="Indian Flapshell Turtle"></td>
+          </tr>
+          <tr>
+            <td>Freshwater Turtle</td>
+            <td>Sri Lankan Softshell Turtle</td>
+            <td>Lissemys ceylonensis</td>
+            <td>Rivers, marshes, and wetlands</td>
+            <td>Endangered</td>
+            <td><img src="Images/Table/Sri Lankan Softshell Turtle.jpg" alt="Sri Lankan Softshell Turtle"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </main>
   <footer class="footer1">
     <div class="footer-left">
