--- a/Hikkaduwa.html
+++ b/Hikkaduwa.html
@@ -56,7 +56,7 @@
         <li><strong>Hours:</strong> 8am-6pm daily</li>
         <li><strong>Admission:</strong> Adults LKR 500, Children LKR 250</li>
         <li><strong>Contact:</strong> +94 77 654 1123, hikkaduwahatchery@gmail.com</li>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.751617847657!2d80.08826271476882!3d6.164009295537319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae182a9ecb0c635%3A0xbd3561821dfbe76b!2sSea%20Turtle%20Hatchery%20%26%20Rescue%20Center!5e0!3m2!1sen!2slk!4v1684948010610!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="0"></iframe>
+        <iframe class="hikkaduwa-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.751617847657!2d80.08826271476882!3d6.164009295537319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae182a9ecb0c635%3A0xbd3561821dfbe76b!2sSea%20Turtle%20Hatchery%20%26%20Rescue%20Center!5e0!3m2!1sen!2slk!4v1684948010610!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" frameborder="0"></iframe>
       </ul>
       <p>
         The Hikkaduwa Turtle Hatchery warmly welcomes visitors who are eager to learn about sea turtle conservation. Guided tours offer a unique opportunity to explore the hatchery's facilities and witness firsthand the efforts made to protect and preserve sea turtles.
