Final Commit for this Sem1

--- a/Bentota.html
+++ b/Bentota.html
@@ -112,7 +112,7 @@
     </div>
   </footer>
   <footer class="footer2">
-    <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by Althaf Rifath</p>
+    <p>&copy; 2023 Turtle Hatcheries Sri Lanka. All rights reserved. Designed and Developed by <a href="https://www.linkedin.com/in/althaf-rifath/" target="_blank" rel="noopener" style="color: white; text-decoration: none;"><strong>Althaf Rifath</strong></a></p>
   </footer> 
 </body>
 </html>
