--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="Hikkaduwa.html">Learn More</a>
       </div>
       <div class="hatchery">
-        <img src="Images/kosgoda.jpg." alt="Kosgoda Turtle Hatchery">
+        <img src="Images/Kosgoda.jpg" alt="Kosgoda Turtle Hatchery">
         <h3>Kosgoda Turtle Hatchery</h3>
         <p>
           The Kosgoda Turtle Hatchery in Sri Lanka, established in 1981 by the Sri Lanka Wildlife Protection Society, is dedicated to protecting and conserving sea turtles.
