--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
   </header>
   <main>
-    <section class="hero">
+    <section class="super-head">
       <h1>Turtle Hatcheries in SriLanka</h1>
       <p>Welcome to our website showcasing the turtle hatcheries in Sri Lanka. Our mission is to protect and conserve the turtle population in Sri Lanka.</p>
       <button>Learn More</button>
