--- a/Turtle Categories.html
+++ b/Turtle Categories.html
@@ -29,7 +29,7 @@
     </nav>
   </header>
   <main>
-    <section class="hero">
+    <section class="super-head">
       <h1>Turtle Hatcheries in Sri Lanka</h1>
       <p>Welcome to our website showcasing the turtle hatcheries in Sri Lanka. Our mission is to protect and conserve the turtle population in Sri Lanka.</p>
       <button>Learn More</button>
