--- a/Hikkaduwa.html
+++ b/Hikkaduwa.html
@@ -25,6 +25,7 @@
               <li class="subnav2"><a href="Kosgoda.html">Kosgoda</a></li>
           </ul>
         <li><a href="Purchase and Donate.html">Purchase and Donate</a></li>
+        <li><a href="Tickets.html">Buy Tickets</a></li>
       </ul>
     </nav>
   </header>
@@ -63,6 +64,8 @@
         
         One of the highlights of the visit is the chance to actively participate in the release of baby turtles into the ocean, an unforgettable experience that fosters a deeper connection and appreciation for these remarkable creatures.
       </p>
+      <br>
+      <a href="Tickets.html"><button type="button">Book Now</button></a>
     </section>
   </main>
   <footer class="footer1">
