HTML page setup

--- a/Tickets.html
+++ b/Tickets.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Tickets - Turtle Hatcheries in Sri Lanka</title>
-    <link rel="stylesheet" href="">
     <link rel="icon" href="Images/Favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/Tickets.css">
-    <script src="javaScript/Tickets.js" defer></script>
+    <script src="javaScript/Tickets.js"></script>
+    <script src="javaScript/Payment.js"></script>
+    <script src="javaScript/Confirmation.js"></script>
+    <script src="javaScript/Details.js"></script>
     <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
 <body x-data="{currentStep: 'tickets'}">
