--- a/Payments.html
+++ b/Payments.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payments Page</title>
+    <link rel="icon" href="Images/Favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/Tickets.css">
+    <script src="javaScript/Tickets.js"></script>
+    <script src="javaScript/Payment.js"></script>
+    <script src="javaScript/Confirmation.js"></script>
+    <script src="javaScript/Details.js"></script>
+    <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
 <body>
     
