--- a/Confirmation.html
+++ b/Confirmation.html
@@ -12,7 +12,32 @@
     <script src="javaScript/Details.js"></script>
     <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
-<body>
+<body x-data="{currentStep: 'confirmation'}">
+
+    <section class="super-head">
+        <h1>Confirmation</h1>
+        <p>Enter your details to proceed with the payment</p>
+    </section>
+
+    <div x-data="{steps: ['Tickets', 'Details', 'Confirmation', 'Payment']}">
+        <header>
+            <ul>
+                <template x-for="(step, index) in steps" x-key="index">
+                    <li>
+                        <span x-text="step"></span>
+                        <span x-show="currentStep == step"> (step)</span>
+                    </li>
+                </template>
+            </ul>
+        </header>
+    </div>
+
+    <!--Confirmation Step-->
+    <div class="main" x-show="currentStep === 'confirmation'">
+        <h2>Confirmation</h2>
+        <button x-on:click="currentStep = 'details'">Previous</button>
+        <button x-on:click="currentStep = 'payment'">Next</button>
+    </div>
     
 </body>
 </html>
