--- a/Details.html
+++ b/Details.html
@@ -12,7 +12,73 @@
     <script src="javaScript/Details.js"></script>
     <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
-<body>
+<body x-data="{currentStep: 'details'}">
     
+    <section class="super-head">
+        <h1>Details</h1>
+        <p>Enter your details to proceed with the payment</p>
+    </section>
+
+    <div x-data="{steps: ['Tickets', 'Details', 'Confirmation', 'Payment']}">
+        <header>
+            <ul>
+                <template x-for="(step, index) in steps" x-key="index">
+                    <li>
+                        <span x-text="step"></span>
+                        <span x-show="currentStep == step"> (step)</span>
+                    </li>
+                </template>
+            </ul>
+        </header>
+    </div>
+
+    <!--Details Step-->
+    <div class="main" x-show="currentStep === 'details'">
+        <h2>Details</h2>
+        <div class="summary-table">
+            <table>
+                <tr>
+                    <td>Date</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Time</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Duration</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="tickets-cell">Tickets</td>
+                    <td class="charges-cell">Charges</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Total Payable</td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <div class="form">
+            <h2>Enter Your Details</h2>
+            <form>
+                <label for="fullName"><b>Full Name</b></label>
+                <input type="text" name="firstName" id="fulltName" placeholder="Enter your Full Name" required>
+                <label for="phone"><b>Mobile Number</b></label>
+                <input type="tel" name="phone" id="phone" placeholder="Enter your Phone Number" required>
+                <label for="email"><b>Email</b></label>
+                <input type="email" name="email" id="email" placeholder="Enter your Email" required>
+                <label for="confirmEmail"><b>Confirm Email</b></label>
+                <input type="email" name="confirmEmail" id="confirmEmail" placeholder="Confirm your Email" required>
+            </form>
+        </div>
+        <button x-on:click="currentStep = 'tickets'">Previous</button>
+        <button x-on:click="currentStep = 'confirmation'">Next</button>
+    </div>
+
 </body>
 </html>
