JSON setup Successfull

--- a/Confirmation.html
+++ b/Confirmation.html
@@ -33,7 +33,7 @@
     </div> -->
 
     <!--Confirmation Step-->
-    <div class="main">
+    <div class="main" x-data="confirmation">
         <h2>Confirmation</h2>
         <button x-on:click="currentStep = 'details'">Previous</button>
         <button x-on:click="currentStep = 'payment'">Next</button>
