--- a/Details.html
+++ b/Details.html
@@ -33,7 +33,7 @@
     </div> -->
 
     <!--Details Step-->
-    <div class="main">
+    <div class="main" x-data="details">
         <h2>Details</h2>
         <div class="summary-table">
             <table>
