--- a/Payments.html
+++ b/Payments.html
@@ -33,7 +33,7 @@
     </div> -->
 
     <!--Payment Step-->
-    <div class="main">
+    <div class="main" x-data="payment">
         <h2>Payment</h2>
         <button x-on:click="currentStep = 'confirmation'">Previous</button>
         <button x-on:click="currentStep = 'tickets'">Next</button>
